# mole

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  build.bat  main.cpp  main.h
aggregate/: common.h
cmake/: compile_assets.cmake  windows_resources.cmake
commands/: commands.cpp  commands.h
g_flags/: flags.cpp  flags.h
hooks/: memory.cpp  memory.h
host/: host.h
logging/: logger.cpp  logger.h
memory/: resolve_symbol.h
mole/: main.cpp  main.h
mole/commands/: commands.cpp  commands.h
mole/hooks/: memory.cpp
mole/host/: host.cpp  host.h
mole/ipc/: server.cpp  server.h
mole/logging/: logger.cpp  logger.h
mole/memory/: resolve_symbol.cpp
mole_ui/: CMakeLists.txt  main.cpp  main.h  resources.h
mole_ui/aggregate/: common.h
mole_ui/commands/: commands.cpp  commands.h
mole_ui/ipc/: client.cpp  client.h
mole_ui/ui/: root.cpp  root.h
tests/: basic_load_mole_gui.cpp
threads/: threads.cpp  threads.h
tools/: CMakeLists.txt  bin2c.c
unload/: unloader.cpp  unloader.h
